--- a/styles/main.css
+++ b/styles/main.css
@@ -7,7 +7,7 @@
     --mainBorderColor:rgb(218, 218, 218);
     --mainBgColor:rgb(249, 250,251);
 
-    --mainTextColor-dark:#fff;
+    /*--mainTextColor-dark:#fff;
     --secondaryTextColor-dark:#adb0b1;
     --mainLinkColor-dark:rgb(30, 190,214);
     --mainBorderColor-dark:#2b3031;
@@ -18,7 +18,7 @@
     --mainLinkColor:var(--mainLinkColor-dark);
     --mainBorderColor:var(--mainBorderColor-dark);
     --mainBgColor:var(--mainBgColor-dark);
-    
+    */
 }
 
 *{
